# Vinyl

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  PLAN.md  README.md  deny.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml  visual.yml
crates/vn_bevy/: Cargo.toml
crates/vn_bevy/examples/: mvp_bevy.rs
crates/vn_bevy/src/: camera.rs  components.rs  driver.rs  input.rs  lib.rs  player.rs  plugin.rs  render.rs  resources.rs  systems.rs
crates/vn_bevy/src/player/: menu.rs  save.rs  story.rs  visual_test.rs
crates/vn_bevy/tests/: presentation_sync.rs  story_driver.rs  thumbnail.rs
crates/vn_cli/: Cargo.toml
crates/vn_cli/src/: main.rs
crates/vn_cli/tests/: cli.rs
crates/vn_core/: Cargo.toml
crates/vn_core/src/: ast.rs  compile.rs  ir.rs  lib.rs  save.rs  vm.rs
crates/vn_core/tests/: rollback_layout.rs  save_identity.rs  vm.rs
crates/vn_runtime/: Cargo.toml
crates/vn_runtime/src/: asset.rs  lib.rs  presentation.rs  save_store.rs
crates/vn_runtime/tests/: asset.rs  presentation.rs  save_store.rs
crates/vn_script/: Cargo.toml
crates/vn_script/src/: asset.rs  diagnostics.rs  lib.rs  localize.rs  manifest.rs  parser.rs  project.rs  validate.rs
crates/vn_script/tests/: asset_validate.rs  expressions.rs  localize.rs  parser_performance.rs  parser_validate.rs  project_manifest.rs
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/adr/: 0001-ship-cli-and-player-as-one-binary.md  0002-save-files-preserve-rollback-history.md  0003-player-preferences-live-outside-save-slots.md
docs/src/content/docs/: architecture.md  assets.md  cli.md  development.md  editor-setup.md  example-game.md  index.md  install.md  localization.md  performance.md  player.md  project-layout.md  quickstart.md  saves.md  script-language.md  troubleshooting.md
docs/src/styles/: vinyl.css
editors/vscode-vinyl/: README.md  language-configuration.json  package.json  pnpm-lock.yaml
editors/vscode-vinyl/syntaxes/: vinyl-vn.tmLanguage.json
examples/branching-mystery/: README.md  vinyl.toml
examples/branching-mystery/locale/: en-US.ftl  id-ID.ftl
examples/branching-mystery/script/: endings.vn  start.vn
examples/branching-mystery/script/chapters/: cabinet.vn
fixtures/bad_missing/script/: start.vn
fixtures/mvp/: game.toml  vinyl.toml
fixtures/mvp/script/: start.vn
scripts/: visual-ci.py
