[package]
name = "vn_bevy"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_asset",
    "bevy_image",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "std",
    "png",
] }
vn_core = { path = "../vn_core" }
vn_runtime = { path = "../vn_runtime" }
vn_script = { path = "../vn_script" }
wasm-bindgen-futures = "0.4.70"

[features]
default = []
audio = ["bevy/bevy_audio"]
