[package]
name = "vn_bevy"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_asset",
    "bevy_image",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "png",
    "std",
] }
chrono.workspace = true
vn_core = { path = "../vn_core" }
vn_runtime = { path = "../vn_runtime" }
vn_script = { path = "../vn_script" }
wasm-bindgen-futures = "0.4.70"
image.workspace = true
rodio = { version = "0.20", default-features = false, features = ["mp3"], optional = true }
soa-rs.workspace = true

[features]
default = []
desktop = ["bevy/bevy_ui_render", "bevy/bevy_winit", "bevy/x11"]
audio = ["desktop", "bevy/bevy_audio", "bevy/mp3", "dep:rodio"]
