[package]
name = "vn_cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
vn_core = { path = "../vn_core" }
vn_runtime = { path = "../vn_runtime" }
vn_script = { path = "../vn_script" }
