[package]
name = "vn_cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "vn"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
vn_bevy = { path = "../vn_bevy", default-features = false }
vn_core = { path = "../vn_core" }
vn_runtime = { path = "../vn_runtime" }
vn_script = { path = "../vn_script" }

[features]
default = ["desktop"]
desktop = ["vn_bevy/desktop"]
audio = ["desktop", "vn_bevy/audio"]
